parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     empty -> <empty>
Rule 2     add_loop_label -> <empty>
Rule 3     PROGRAM -> STATEMENT
Rule 4     PROGRAM -> FUNCLIST
Rule 5     PROGRAM -> empty
Rule 6     FUNCLIST -> FUNCDEF FUNCLIST2
Rule 7     FUNCLIST2 -> FUNCLIST
Rule 8     FUNCLIST2 -> empty
Rule 9     FUNCDEF -> DEF IDENT LPARENTHESES PARAMLIST RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE
Rule 10    PARAMLIST -> TYPE IDENT PARAMLIST2
Rule 11    PARAMLIST -> empty
Rule 12    PARAMLIST2 -> COMMA PARAMLIST
Rule 13    PARAMLIST2 -> empty
Rule 14    TYPE -> INT
Rule 15    TYPE -> FLOAT
Rule 16    TYPE -> STRING
Rule 17    STATEMENT -> VARDECL SEMICOLON
Rule 18    STATEMENT -> ATRIBSTAT SEMICOLON
Rule 19    STATEMENT -> PRINTSTAT SEMICOLON
Rule 20    STATEMENT -> READSTAT SEMICOLON
Rule 21    STATEMENT -> RETURNSTAT SEMICOLON
Rule 22    STATEMENT -> IFSTAT
Rule 23    STATEMENT -> FORSTAT
Rule 24    STATEMENT -> LEFTBRACE STATELIST RIGHTBRACE
Rule 25    STATEMENT -> BREAK SEMICOLON
Rule 26    STATEMENT -> SEMICOLON
Rule 27    VARDECL -> TYPE IDENT ARRAY_OPT
Rule 28    ARRAY_OPT -> LBRACKET INTCONSTANT RBRACKET ARRAY_OPT
Rule 29    ARRAY_OPT -> empty
Rule 30    ATRIBSTAT -> LVALUE ASSIGN RIGHT_ATRIB
Rule 31    RIGHT_ATRIB -> EXPR_OR_FCALL
Rule 32    RIGHT_ATRIB -> ALLOCEXPRESSION
Rule 33    EXPR_OR_FCALL -> MINUS FACTOR OPT_UNARY_TERM OPT_ARITHM OPT_CMP_EXPR
Rule 34    EXPR_OR_FCALL -> PLUS FACTOR OPT_UNARY_TERM OPT_ARITHM OPT_CMP_EXPR
Rule 35    EXPR_OR_FCALL -> INTCONSTANT OPT_UNARY_TERM OPT_ARITHM OPT_CMP_EXPR
Rule 36    EXPR_OR_FCALL -> STRINGCONSTANT OPT_UNARY_TERM OPT_ARITHM OPT_CMP_EXPR
Rule 37    EXPR_OR_FCALL -> FLOATCONSTANT OPT_UNARY_TERM OPT_ARITHM OPT_CMP_EXPR
Rule 38    EXPR_OR_FCALL -> NULL OPT_UNARY_TERM OPT_ARITHM OPT_CMP_EXPR
Rule 39    EXPR_OR_FCALL -> LPARENTHESES NUMEXPRESSION RPARENTHESES OPT_UNARY_TERM OPT_ARITHM OPT_CMP_EXPR
Rule 40    EXPR_OR_FCALL -> IDENT AFTER_IDENT
Rule 41    AFTER_IDENT -> OPT_ALLOC_EXPR OPT_UNARY_TERM OPT_ARITHM OPT_CMP_EXPR
Rule 42    AFTER_IDENT -> LPARENTHESES PARAMLISTCALL RPARENTHESES
Rule 43    PARAMLISTCALL -> IDENT PARAMLISTCALL2
Rule 44    PARAMLISTCALL -> empty
Rule 45    PARAMLISTCALL2 -> COMMA PARAMLISTCALL
Rule 46    PARAMLISTCALL2 -> empty
Rule 47    PRINTSTAT -> PRINT EXPRESSION
Rule 48    READSTAT -> READ LVALUE
Rule 49    RETURNSTAT -> RETURN OPT_LVALUE
Rule 50    OPT_LVALUE -> LVALUE
Rule 51    OPT_LVALUE -> empty
Rule 52    IFSTAT -> IF LPARENTHESES EXPRESSION RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE ELSESTAT
Rule 53    ELSESTAT -> ELSE LEFTBRACE STATELIST RIGHTBRACE
Rule 54    ELSESTAT -> empty
Rule 55    FORSTAT -> add_loop_label FOR LPARENTHESES ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE
Rule 56    STATELIST -> STATEMENT OPT_STATELIST
Rule 57    OPT_STATELIST -> STATELIST
Rule 58    OPT_STATELIST -> empty
Rule 59    ALLOCEXPRESSION -> NEW TYPE LBRACKET NUMEXPRESSION RBRACKET OPT_ALLOC_EXPR
Rule 60    OPT_ALLOC_EXPR -> LBRACKET NUMEXPRESSION RBRACKET OPT_ALLOC_EXPR
Rule 61    OPT_ALLOC_EXPR -> empty
Rule 62    EXPRESSION -> NUMEXPRESSION OPT_CMP_EXPR
Rule 63    OPT_CMP_EXPR -> CMP NUMEXPRESSION
Rule 64    OPT_CMP_EXPR -> empty
Rule 65    CMP -> LT
Rule 66    CMP -> GT
Rule 67    CMP -> LE
Rule 68    CMP -> GE
Rule 69    CMP -> EQUALS
Rule 70    CMP -> DIFFERENT
Rule 71    NUMEXPRESSION -> TERM OPT_ARITHM
Rule 72    OPT_ARITHM -> ARITHM TERM OPT_ARITHM
Rule 73    OPT_ARITHM -> empty
Rule 74    ARITHM -> PLUS
Rule 75    ARITHM -> MINUS
Rule 76    OPT_UNARY -> TIMES
Rule 77    OPT_UNARY -> MOD
Rule 78    OPT_UNARY -> DIVIDE
Rule 79    TERM -> UNARYEXPR OPT_UNARY_TERM
Rule 80    OPT_UNARY_TERM -> OPT_UNARY TERM
Rule 81    OPT_UNARY_TERM -> empty
Rule 82    UNARYEXPR -> ARITHM FACTOR
Rule 83    UNARYEXPR -> FACTOR
Rule 84    FACTOR -> INTCONSTANT
Rule 85    FACTOR -> FLOATCONSTANT
Rule 86    FACTOR -> STRINGCONSTANT
Rule 87    FACTOR -> NULL
Rule 88    FACTOR -> LVALUE
Rule 89    FACTOR -> LPARENTHESES NUMEXPRESSION RPARENTHESES
Rule 90    LVALUE -> IDENT OPT_ALLOC_EXPR

Terminals, with rules where they appear

ASSIGN               : 30
BREAK                : 25
COMMA                : 12 45
DEF                  : 9
DIFFERENT            : 70
DIVIDE               : 78
ELSE                 : 53
EQUALS               : 69
FLOAT                : 15
FLOATCONSTANT        : 37 85
FOR                  : 55
GE                   : 68
GT                   : 66
IDENT                : 9 10 27 40 43 90
IF                   : 52
INT                  : 14
INTCONSTANT          : 28 35 84
LBRACKET             : 28 59 60
LE                   : 67
LEFTBRACE            : 9 24 52 53 55
LPARENTHESES         : 9 39 42 52 55 89
LT                   : 65
MINUS                : 33 75
MOD                  : 77
NEW                  : 59
NULL                 : 38 87
PLUS                 : 34 74
PRINT                : 47
RBRACKET             : 28 59 60
READ                 : 48
RETURN               : 49
RIGHTBRACE           : 9 24 52 53 55
RPARENTHESES         : 9 39 42 52 55 89
SEMICOLON            : 17 18 19 20 21 25 26 55 55
STRING               : 16
STRINGCONSTANT       : 36 86
TIMES                : 76
error                : 

Nonterminals, with rules where they appear

AFTER_IDENT          : 40
ALLOCEXPRESSION      : 32
ARITHM               : 72 82
ARRAY_OPT            : 27 28
ATRIBSTAT            : 18 55 55
CMP                  : 63
ELSESTAT             : 52
EXPRESSION           : 47 52 55
EXPR_OR_FCALL        : 31
FACTOR               : 33 34 82 83
FORSTAT              : 23
FUNCDEF              : 6
FUNCLIST             : 4 7
FUNCLIST2            : 6
IFSTAT               : 22
LVALUE               : 30 48 50 88
NUMEXPRESSION        : 39 59 60 62 63 89
OPT_ALLOC_EXPR       : 41 59 60 90
OPT_ARITHM           : 33 34 35 36 37 38 39 41 71 72
OPT_CMP_EXPR         : 33 34 35 36 37 38 39 41 62
OPT_LVALUE           : 49
OPT_STATELIST        : 56
OPT_UNARY            : 80
OPT_UNARY_TERM       : 33 34 35 36 37 38 39 41 79
PARAMLIST            : 9 12
PARAMLIST2           : 10
PARAMLISTCALL        : 42 45
PARAMLISTCALL2       : 43
PRINTSTAT            : 19
PROGRAM              : 0
READSTAT             : 20
RETURNSTAT           : 21
RIGHT_ATRIB          : 30
STATELIST            : 9 24 52 53 55 57
STATEMENT            : 3 56
TERM                 : 71 72 80
TYPE                 : 10 27 59
UNARYEXPR            : 79
VARDECL              : 17
add_loop_label       : 55
empty                : 5 8 11 13 29 44 46 51 54 58 61 64 73 81


state 0

    (0) S' -> . PROGRAM
    (3) PROGRAM -> . STATEMENT
    (4) PROGRAM -> . FUNCLIST
    (5) PROGRAM -> . empty
    (17) STATEMENT -> . VARDECL SEMICOLON
    (18) STATEMENT -> . ATRIBSTAT SEMICOLON
    (19) STATEMENT -> . PRINTSTAT SEMICOLON
    (20) STATEMENT -> . READSTAT SEMICOLON
    (21) STATEMENT -> . RETURNSTAT SEMICOLON
    (22) STATEMENT -> . IFSTAT
    (23) STATEMENT -> . FORSTAT
    (24) STATEMENT -> . LEFTBRACE STATELIST RIGHTBRACE
    (25) STATEMENT -> . BREAK SEMICOLON
    (26) STATEMENT -> . SEMICOLON
    (6) FUNCLIST -> . FUNCDEF FUNCLIST2
    (1) empty -> .
    (27) VARDECL -> . TYPE IDENT ARRAY_OPT
    (30) ATRIBSTAT -> . LVALUE ASSIGN RIGHT_ATRIB
    (47) PRINTSTAT -> . PRINT EXPRESSION
    (48) READSTAT -> . READ LVALUE
    (49) RETURNSTAT -> . RETURN OPT_LVALUE
    (52) IFSTAT -> . IF LPARENTHESES EXPRESSION RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE ELSESTAT
    (55) FORSTAT -> . add_loop_label FOR LPARENTHESES ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE
    (9) FUNCDEF -> . DEF IDENT LPARENTHESES PARAMLIST RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE
    (14) TYPE -> . INT
    (15) TYPE -> . FLOAT
    (16) TYPE -> . STRING
    (90) LVALUE -> . IDENT OPT_ALLOC_EXPR
    (2) add_loop_label -> .

    LEFTBRACE       shift and go to state 13
    BREAK           shift and go to state 14
    SEMICOLON       shift and go to state 6
    $end            reduce using rule 1 (empty -> .)
    PRINT           shift and go to state 19
    READ            shift and go to state 20
    RETURN          shift and go to state 21
    IF              shift and go to state 22
    DEF             shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 27
    IDENT           shift and go to state 17
    FOR             reduce using rule 2 (add_loop_label -> .)

    PROGRAM                        shift and go to state 1
    STATEMENT                      shift and go to state 2
    FUNCLIST                       shift and go to state 3
    empty                          shift and go to state 4
    VARDECL                        shift and go to state 5
    ATRIBSTAT                      shift and go to state 7
    PRINTSTAT                      shift and go to state 8
    READSTAT                       shift and go to state 9
    RETURNSTAT                     shift and go to state 10
    IFSTAT                         shift and go to state 11
    FORSTAT                        shift and go to state 12
    FUNCDEF                        shift and go to state 15
    TYPE                           shift and go to state 16
    LVALUE                         shift and go to state 18
    add_loop_label                 shift and go to state 23

state 1

    (0) S' -> PROGRAM .



state 2

    (3) PROGRAM -> STATEMENT .

    $end            reduce using rule 3 (PROGRAM -> STATEMENT .)


state 3

    (4) PROGRAM -> FUNCLIST .

    $end            reduce using rule 4 (PROGRAM -> FUNCLIST .)


state 4

    (5) PROGRAM -> empty .

    $end            reduce using rule 5 (PROGRAM -> empty .)


state 5

    (17) STATEMENT -> VARDECL . SEMICOLON

    SEMICOLON       shift and go to state 28


state 6

    (26) STATEMENT -> SEMICOLON .

    $end            reduce using rule 26 (STATEMENT -> SEMICOLON .)
    LEFTBRACE       reduce using rule 26 (STATEMENT -> SEMICOLON .)
    BREAK           reduce using rule 26 (STATEMENT -> SEMICOLON .)
    SEMICOLON       reduce using rule 26 (STATEMENT -> SEMICOLON .)
    PRINT           reduce using rule 26 (STATEMENT -> SEMICOLON .)
    READ            reduce using rule 26 (STATEMENT -> SEMICOLON .)
    RETURN          reduce using rule 26 (STATEMENT -> SEMICOLON .)
    IF              reduce using rule 26 (STATEMENT -> SEMICOLON .)
    INT             reduce using rule 26 (STATEMENT -> SEMICOLON .)
    FLOAT           reduce using rule 26 (STATEMENT -> SEMICOLON .)
    STRING          reduce using rule 26 (STATEMENT -> SEMICOLON .)
    IDENT           reduce using rule 26 (STATEMENT -> SEMICOLON .)
    FOR             reduce using rule 26 (STATEMENT -> SEMICOLON .)
    RIGHTBRACE      reduce using rule 26 (STATEMENT -> SEMICOLON .)


state 7

    (18) STATEMENT -> ATRIBSTAT . SEMICOLON

    SEMICOLON       shift and go to state 29


state 8

    (19) STATEMENT -> PRINTSTAT . SEMICOLON

    SEMICOLON       shift and go to state 30


state 9

    (20) STATEMENT -> READSTAT . SEMICOLON

    SEMICOLON       shift and go to state 31


state 10

    (21) STATEMENT -> RETURNSTAT . SEMICOLON

    SEMICOLON       shift and go to state 32


state 11

    (22) STATEMENT -> IFSTAT .

    $end            reduce using rule 22 (STATEMENT -> IFSTAT .)
    LEFTBRACE       reduce using rule 22 (STATEMENT -> IFSTAT .)
    BREAK           reduce using rule 22 (STATEMENT -> IFSTAT .)
    SEMICOLON       reduce using rule 22 (STATEMENT -> IFSTAT .)
    PRINT           reduce using rule 22 (STATEMENT -> IFSTAT .)
    READ            reduce using rule 22 (STATEMENT -> IFSTAT .)
    RETURN          reduce using rule 22 (STATEMENT -> IFSTAT .)
    IF              reduce using rule 22 (STATEMENT -> IFSTAT .)
    INT             reduce using rule 22 (STATEMENT -> IFSTAT .)
    FLOAT           reduce using rule 22 (STATEMENT -> IFSTAT .)
    STRING          reduce using rule 22 (STATEMENT -> IFSTAT .)
    IDENT           reduce using rule 22 (STATEMENT -> IFSTAT .)
    FOR             reduce using rule 22 (STATEMENT -> IFSTAT .)
    RIGHTBRACE      reduce using rule 22 (STATEMENT -> IFSTAT .)


state 12

    (23) STATEMENT -> FORSTAT .

    $end            reduce using rule 23 (STATEMENT -> FORSTAT .)
    LEFTBRACE       reduce using rule 23 (STATEMENT -> FORSTAT .)
    BREAK           reduce using rule 23 (STATEMENT -> FORSTAT .)
    SEMICOLON       reduce using rule 23 (STATEMENT -> FORSTAT .)
    PRINT           reduce using rule 23 (STATEMENT -> FORSTAT .)
    READ            reduce using rule 23 (STATEMENT -> FORSTAT .)
    RETURN          reduce using rule 23 (STATEMENT -> FORSTAT .)
    IF              reduce using rule 23 (STATEMENT -> FORSTAT .)
    INT             reduce using rule 23 (STATEMENT -> FORSTAT .)
    FLOAT           reduce using rule 23 (STATEMENT -> FORSTAT .)
    STRING          reduce using rule 23 (STATEMENT -> FORSTAT .)
    IDENT           reduce using rule 23 (STATEMENT -> FORSTAT .)
    FOR             reduce using rule 23 (STATEMENT -> FORSTAT .)
    RIGHTBRACE      reduce using rule 23 (STATEMENT -> FORSTAT .)


state 13

    (24) STATEMENT -> LEFTBRACE . STATELIST RIGHTBRACE
    (56) STATELIST -> . STATEMENT OPT_STATELIST
    (17) STATEMENT -> . VARDECL SEMICOLON
    (18) STATEMENT -> . ATRIBSTAT SEMICOLON
    (19) STATEMENT -> . PRINTSTAT SEMICOLON
    (20) STATEMENT -> . READSTAT SEMICOLON
    (21) STATEMENT -> . RETURNSTAT SEMICOLON
    (22) STATEMENT -> . IFSTAT
    (23) STATEMENT -> . FORSTAT
    (24) STATEMENT -> . LEFTBRACE STATELIST RIGHTBRACE
    (25) STATEMENT -> . BREAK SEMICOLON
    (26) STATEMENT -> . SEMICOLON
    (27) VARDECL -> . TYPE IDENT ARRAY_OPT
    (30) ATRIBSTAT -> . LVALUE ASSIGN RIGHT_ATRIB
    (47) PRINTSTAT -> . PRINT EXPRESSION
    (48) READSTAT -> . READ LVALUE
    (49) RETURNSTAT -> . RETURN OPT_LVALUE
    (52) IFSTAT -> . IF LPARENTHESES EXPRESSION RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE ELSESTAT
    (55) FORSTAT -> . add_loop_label FOR LPARENTHESES ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE
    (14) TYPE -> . INT
    (15) TYPE -> . FLOAT
    (16) TYPE -> . STRING
    (90) LVALUE -> . IDENT OPT_ALLOC_EXPR
    (2) add_loop_label -> .

    LEFTBRACE       shift and go to state 13
    BREAK           shift and go to state 14
    SEMICOLON       shift and go to state 6
    PRINT           shift and go to state 19
    READ            shift and go to state 20
    RETURN          shift and go to state 21
    IF              shift and go to state 22
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 27
    IDENT           shift and go to state 17
    FOR             reduce using rule 2 (add_loop_label -> .)

    STATELIST                      shift and go to state 33
    STATEMENT                      shift and go to state 34
    VARDECL                        shift and go to state 5
    ATRIBSTAT                      shift and go to state 7
    PRINTSTAT                      shift and go to state 8
    READSTAT                       shift and go to state 9
    RETURNSTAT                     shift and go to state 10
    IFSTAT                         shift and go to state 11
    FORSTAT                        shift and go to state 12
    TYPE                           shift and go to state 16
    LVALUE                         shift and go to state 18
    add_loop_label                 shift and go to state 23

state 14

    (25) STATEMENT -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 35


state 15

    (6) FUNCLIST -> FUNCDEF . FUNCLIST2
    (7) FUNCLIST2 -> . FUNCLIST
    (8) FUNCLIST2 -> . empty
    (6) FUNCLIST -> . FUNCDEF FUNCLIST2
    (1) empty -> .
    (9) FUNCDEF -> . DEF IDENT LPARENTHESES PARAMLIST RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE

    $end            reduce using rule 1 (empty -> .)
    DEF             shift and go to state 24

    FUNCDEF                        shift and go to state 15
    FUNCLIST2                      shift and go to state 36
    FUNCLIST                       shift and go to state 37
    empty                          shift and go to state 38

state 16

    (27) VARDECL -> TYPE . IDENT ARRAY_OPT

    IDENT           shift and go to state 39


state 17

    (90) LVALUE -> IDENT . OPT_ALLOC_EXPR
    (60) OPT_ALLOC_EXPR -> . LBRACKET NUMEXPRESSION RBRACKET OPT_ALLOC_EXPR
    (61) OPT_ALLOC_EXPR -> . empty
    (1) empty -> .

    LBRACKET        shift and go to state 41
    ASSIGN          reduce using rule 1 (empty -> .)
    TIMES           reduce using rule 1 (empty -> .)
    MOD             reduce using rule 1 (empty -> .)
    DIVIDE          reduce using rule 1 (empty -> .)
    PLUS            reduce using rule 1 (empty -> .)
    MINUS           reduce using rule 1 (empty -> .)
    LT              reduce using rule 1 (empty -> .)
    GT              reduce using rule 1 (empty -> .)
    LE              reduce using rule 1 (empty -> .)
    GE              reduce using rule 1 (empty -> .)
    EQUALS          reduce using rule 1 (empty -> .)
    DIFFERENT       reduce using rule 1 (empty -> .)
    SEMICOLON       reduce using rule 1 (empty -> .)
    RBRACKET        reduce using rule 1 (empty -> .)
    RPARENTHESES    reduce using rule 1 (empty -> .)

    OPT_ALLOC_EXPR                 shift and go to state 40
    empty                          shift and go to state 42

state 18

    (30) ATRIBSTAT -> LVALUE . ASSIGN RIGHT_ATRIB

    ASSIGN          shift and go to state 43


state 19

    (47) PRINTSTAT -> PRINT . EXPRESSION
    (62) EXPRESSION -> . NUMEXPRESSION OPT_CMP_EXPR
    (71) NUMEXPRESSION -> . TERM OPT_ARITHM
    (79) TERM -> . UNARYEXPR OPT_UNARY_TERM
    (82) UNARYEXPR -> . ARITHM FACTOR
    (83) UNARYEXPR -> . FACTOR
    (74) ARITHM -> . PLUS
    (75) ARITHM -> . MINUS
    (84) FACTOR -> . INTCONSTANT
    (85) FACTOR -> . FLOATCONSTANT
    (86) FACTOR -> . STRINGCONSTANT
    (87) FACTOR -> . NULL
    (88) FACTOR -> . LVALUE
    (89) FACTOR -> . LPARENTHESES NUMEXPRESSION RPARENTHESES
    (90) LVALUE -> . IDENT OPT_ALLOC_EXPR

    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    INTCONSTANT     shift and go to state 52
    FLOATCONSTANT   shift and go to state 53
    STRINGCONSTANT  shift and go to state 54
    NULL            shift and go to state 55
    LPARENTHESES    shift and go to state 57
    IDENT           shift and go to state 17

    EXPRESSION                     shift and go to state 44
    NUMEXPRESSION                  shift and go to state 45
    TERM                           shift and go to state 46
    UNARYEXPR                      shift and go to state 47
    ARITHM                         shift and go to state 48
    FACTOR                         shift and go to state 49
    LVALUE                         shift and go to state 56

state 20

    (48) READSTAT -> READ . LVALUE
    (90) LVALUE -> . IDENT OPT_ALLOC_EXPR

    IDENT           shift and go to state 17

    LVALUE                         shift and go to state 58

state 21

    (49) RETURNSTAT -> RETURN . OPT_LVALUE
    (50) OPT_LVALUE -> . LVALUE
    (51) OPT_LVALUE -> . empty
    (90) LVALUE -> . IDENT OPT_ALLOC_EXPR
    (1) empty -> .

    IDENT           shift and go to state 17
    SEMICOLON       reduce using rule 1 (empty -> .)

    OPT_LVALUE                     shift and go to state 59
    LVALUE                         shift and go to state 60
    empty                          shift and go to state 61

state 22

    (52) IFSTAT -> IF . LPARENTHESES EXPRESSION RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE ELSESTAT

    LPARENTHESES    shift and go to state 62


state 23

    (55) FORSTAT -> add_loop_label . FOR LPARENTHESES ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE

    FOR             shift and go to state 63


state 24

    (9) FUNCDEF -> DEF . IDENT LPARENTHESES PARAMLIST RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE

    IDENT           shift and go to state 64


state 25

    (14) TYPE -> INT .

    IDENT           reduce using rule 14 (TYPE -> INT .)
    LBRACKET        reduce using rule 14 (TYPE -> INT .)


state 26

    (15) TYPE -> FLOAT .

    IDENT           reduce using rule 15 (TYPE -> FLOAT .)
    LBRACKET        reduce using rule 15 (TYPE -> FLOAT .)


state 27

    (16) TYPE -> STRING .

    IDENT           reduce using rule 16 (TYPE -> STRING .)
    LBRACKET        reduce using rule 16 (TYPE -> STRING .)


state 28

    (17) STATEMENT -> VARDECL SEMICOLON .

    $end            reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    LEFTBRACE       reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    BREAK           reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    SEMICOLON       reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    PRINT           reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    READ            reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    RETURN          reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    IF              reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    INT             reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    FLOAT           reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    STRING          reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    IDENT           reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    FOR             reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)
    RIGHTBRACE      reduce using rule 17 (STATEMENT -> VARDECL SEMICOLON .)


state 29

    (18) STATEMENT -> ATRIBSTAT SEMICOLON .

    $end            reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    LEFTBRACE       reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    BREAK           reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    PRINT           reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    READ            reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    RETURN          reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    IF              reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    INT             reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    FLOAT           reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    STRING          reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    IDENT           reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    FOR             reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    RIGHTBRACE      reduce using rule 18 (STATEMENT -> ATRIBSTAT SEMICOLON .)


state 30

    (19) STATEMENT -> PRINTSTAT SEMICOLON .

    $end            reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    LEFTBRACE       reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    BREAK           reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    PRINT           reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    READ            reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    RETURN          reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    IF              reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    INT             reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    FLOAT           reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    STRING          reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    IDENT           reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    FOR             reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)
    RIGHTBRACE      reduce using rule 19 (STATEMENT -> PRINTSTAT SEMICOLON .)


state 31

    (20) STATEMENT -> READSTAT SEMICOLON .

    $end            reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    LEFTBRACE       reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    BREAK           reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    PRINT           reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    READ            reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    RETURN          reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    IF              reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    INT             reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    FLOAT           reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    STRING          reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    IDENT           reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    FOR             reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)
    RIGHTBRACE      reduce using rule 20 (STATEMENT -> READSTAT SEMICOLON .)


state 32

    (21) STATEMENT -> RETURNSTAT SEMICOLON .

    $end            reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    LEFTBRACE       reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    BREAK           reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    PRINT           reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    READ            reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    RETURN          reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    IF              reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    INT             reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    FLOAT           reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    STRING          reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    IDENT           reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    FOR             reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)
    RIGHTBRACE      reduce using rule 21 (STATEMENT -> RETURNSTAT SEMICOLON .)


state 33

    (24) STATEMENT -> LEFTBRACE STATELIST . RIGHTBRACE

    RIGHTBRACE      shift and go to state 65


state 34

    (56) STATELIST -> STATEMENT . OPT_STATELIST
    (57) OPT_STATELIST -> . STATELIST
    (58) OPT_STATELIST -> . empty
    (56) STATELIST -> . STATEMENT OPT_STATELIST
    (1) empty -> .
    (17) STATEMENT -> . VARDECL SEMICOLON
    (18) STATEMENT -> . ATRIBSTAT SEMICOLON
    (19) STATEMENT -> . PRINTSTAT SEMICOLON
    (20) STATEMENT -> . READSTAT SEMICOLON
    (21) STATEMENT -> . RETURNSTAT SEMICOLON
    (22) STATEMENT -> . IFSTAT
    (23) STATEMENT -> . FORSTAT
    (24) STATEMENT -> . LEFTBRACE STATELIST RIGHTBRACE
    (25) STATEMENT -> . BREAK SEMICOLON
    (26) STATEMENT -> . SEMICOLON
    (27) VARDECL -> . TYPE IDENT ARRAY_OPT
    (30) ATRIBSTAT -> . LVALUE ASSIGN RIGHT_ATRIB
    (47) PRINTSTAT -> . PRINT EXPRESSION
    (48) READSTAT -> . READ LVALUE
    (49) RETURNSTAT -> . RETURN OPT_LVALUE
    (52) IFSTAT -> . IF LPARENTHESES EXPRESSION RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE ELSESTAT
    (55) FORSTAT -> . add_loop_label FOR LPARENTHESES ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPARENTHESES LEFTBRACE STATELIST RIGHTBRACE
    (14) TYPE -> . INT
    (15) TYPE -> . FLOAT
    (16) TYPE -> . STRING
    (90) LVALUE -> . IDENT OPT_ALLOC_EXPR
    (2) add_loop_label -> .
